Flare v1.10 (WIP)

Engine features:

* The configuration menu has been redesigned and is now used as the pause menu.
* The interface features from version 1.09 have been reverted due to being accessible from the pause menu.
* Added an Interface option to disable showing hidden entity markers.
* Support floating point values for loot drop chance values.
* Add 'hide_timeout' option to statbar configuration to support auto-hiding (Leszek Cimała)
* Add 'no_stash' property to item definitions to prevent items from being placed in the stash.

Engine fixes:

* Fixed event activation being tied to distance to the camera position. It is now correctly tied to distance from the player.
* Mouse movement and mouse aim now calculate direction relative to the player instead of relative to the screen.
* Fixed enemy AI so that enemies can now enter combat if a hero ally is in their proximity.
* Fix --data-path command line flag on Windows.
* Fixed dialog not being available if it lacked a topic.
* Fixed loot drop rate bonus having no effect when loot drop chance was too low.
* Fix bug where the wrong requirements were checked for passive powers that had been granted bonus points.
* Items that can't be stashed are now dropped on the ground upon opening the stash.

Game updates:

* Fixed an oversight that allowed easy farming of the Torture Chambers boss and loot chests.
* Made it so that potions and scrolls can not be stashed. This fixes an exploit where players could utilize a low level character to get these items for cheap.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Catalan (ca) update (Marc Tormo i Bochaca)
* German (de) update (Fyrenic)
* French (fr) update (syl_)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Andrey Kapitonov, Igor Paliychuk)
* Chinese (zh) update (dumaosen, neverwin)



Flare v1.09.01 (http://flarerpg.org/index.php/2018/12/12/flare-1-09-01/)

Engine fixes:

* Fixed assertion/crash when engaging in dialog.

Game updates:
