@@ -6,7 +6,8 @@ Engine features:
 * The interface features from version 1.09 have been reverted due to being accessible from the pause menu.
 * Added an Interface option to disable showing hidden entity markers.
 * Support floating point values for loot drop chance values.
-* Add 'hide_timeout' option to statbar configuration to support auto-hiding (Leszek Cimała)
+* Add 'hide_timeout' option to stat bar configuration to support auto-hiding (Leszek Cimała)
+* Added an Interface option to disable stat bar auto-hiding globally.
 * Add 'no_stash' property to item definitions to prevent items from being placed in the stash.
 
 Engine fixes:
